# code-execution-vault

./: README.md  pyproject.toml
docs/: why-dynamic-code-generation.md  why-secure-sandbox.md
js-execution-api/: package.json  server.js
src/progressive_exposure/agents/: .env.example
src/progressive_exposure/agents/orchestrator/: __init__.py  orchestrator_agent.py  remote_script_runner.py
src/progressive_exposure/agents/orchestrator/plugins/: fetch.md  indices.md  portfolio.md  portfolios.md  stocks.md
src/progressive_exposure/agents/orchestrator/skills/javascript-code/: SKILL.md
src/progressive_exposure/agents/orchestrator/skills/javascript-code/scripts/: run_js.py
src/progressive_exposure/agents/orchestrator/skills/risk-analysis-composed/: SKILL.md
src/progressive_exposure/agents/orchestrator/skills/risk-analysis-decomposed/: SKILL.md
src/progressive_exposure/code_execution_api/: app.py  js_script_runner.py  models.py  router.py
tests/: test_code_execution_api.py  test_js_script_runner.py  test_remote_script_runner.py
